# id

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  build.sh  compose.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  start.sh  tailwind.config.js
.github/workflows/: build.yml  pre-commit.yml
trojstenid/: __init__.py  app.css  asgi.py  audit.py  context_processors.py  settings.py  urls.py  wsgi.py
trojstenid/badges/: admin.py  apps.py  models.py
trojstenid/badges/migrations/: 0001_initial.py
trojstenid/locale/sk/LC_MESSAGES/: django.po
trojstenid/profiles/: apps.py  urls.py  views.py
trojstenid/profiles/templates/profile/: profile.html
trojstenid/schools/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
trojstenid/schools/management/commands/: finishschools.py  syncschools.py
trojstenid/schools/migrations/: 0001_initial.py  0002_auto_20250617_2139.py  0003_alter_school_options_alter_schooltype_options_and_more.py
trojstenid/schools/services/: school_sync.py
trojstenid/schools/templates/settings/: school_create.html  school_list.html  school_search.html
trojstenid/users/: admin.py  apps.py  forms.py  github.py  google_groups.py  groups.py  merge.py  models.py  serializers.py  signals.py  tasks.py  urls_api.py  urls_groups.py  urls_oauth.py  validators.py  views.py  views_api.py
trojstenid/users/forms/: allauth.py  settings.py
trojstenid/users/management/commands/: normalize_usernames.py  syncgithubteams.py  syncgooglegroups.py
trojstenid/users/migrations/: 0001_initial.py  0002_application.py  0003_user_avatar_file.py  0004_alter_user_avatar_file.py  0005_application_post_logout_redirect_uris.py  0006_application_allowed_origins_and_more.py  0007_application_group.py  0008_application_push_urls.py  0009_user_now_known_as.py  0010_wifipassword.py
trojstenid/users/templates/: auth_base.html  base.html  landing.html  settings_base.html
trojstenid/users/templates/_partials/: messages.html  navbar.html  navbar_items.html
trojstenid/users/templates/account/: account_inactive.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  verification_sent.html
trojstenid/users/templates/account/email/: account_already_exists_message.txt  account_already_exists_subject.txt  base_message.txt  email_confirmation_message.txt  password_reset_key_message.txt  unknown_account_message.txt  unknown_account_subject.txt
trojstenid/users/templates/account/messages/: cannot_delete_primary_email.txt  email_confirmation_sent.txt  email_confirmed.txt  email_deleted.txt  logged_in.txt  logged_out.txt  password_changed.txt  password_set.txt  primary_email_set.txt  unverified_primary_email.txt
trojstenid/users/templates/forms/: form.html  input.html
trojstenid/users/templates/groups/: group_list.html
trojstenid/users/templates/oauth2_provider/: authorize.html  logout_confirm.html
trojstenid/users/templates/settings/: profile.html  wifi.html
trojstenid/users/templates/socialaccount/: authentication_error.html  connections.html  login.html  login_cancelled.html
trojstenid/users/templates/socialaccount/messages/: account_connected.txt  account_connected_other.txt  account_disconnected.txt
trojstenid/users/templates/socialaccount/partials/: providers.html
trojstenid/users/templates/users/: test.html
trojstenid/users/templatetags/: forms.py  settings.py
