[tool.ruff]
select = ["E", "F", "I"]

[tool.bumpver]
current_version = "2024.12"
version_pattern = "YYYY.INC1"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"trojstenid/__init__.py" = [
    'VERSION = "{version}"'
]


[tool.poetry]
name = "trojstenid"
version = "0.1.0"
description = ""
authors = ["Adam Zahradník <adam@zahradnik.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-debug-toolbar = "^4.4.6"
django-environ = "^0.11.2"
django-allauth = {extras = ["socialaccount"], version = "^64.2.1"}
django-widget-tweaks = "^1.5.0"
django-recaptcha = "^4.0.0"
pillow = "^10.4.0"
django-cleanup = "^8.1.0"
python-ulid = "^2.7.0"
gunicorn = "^23.0.0"
sentry-sdk = "^2.13.0"
django-probes = "^1.7.0"
django-oauth-toolkit = "^2.4.0"
psycopg = {extras = ["binary"], version = "^3.2.1"}


[tool.poetry.group.dev.dependencies]
bumpver = "^2023.1129"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
