[project]
name = "trojstenid"
version = "0.1.0"
description = ""
authors = [{ name = "Adam Zahradník", email = "adam@zahradnik.xyz" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "django~=5.2.0",
    "django-debug-toolbar~=5.2.0",
    "django-environ~=0.12.0",
    "django-allauth[socialaccount]~=64.2.1", # TODO: Upgrade
    "django-widget-tweaks~=1.5.0",
    "django-recaptcha~=4.1.0",
    "pillow~=11.2.1",
    "django-cleanup~=9.0.0",
    "python-ulid~=3.0.0",
    "gunicorn~=23.0.0",
    "sentry-sdk~=2.27.0",
    "django-probes~=1.7.0",
    "django-oauth-toolkit~=3.0.1",
    "psycopg[binary]~=3.2.7",
    "django-types~=0.20.0",
    "django-ipware~=7.0.1",
]

[tool.ruff]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "bumpver~=2024.1130",
    "pre-commit~=4.2.0",
]

[tool.bumpver]
current_version = "2025.2"
version_pattern = "YYYY.INC1"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"trojstenid/__init__.py" = [
    'VERSION = "{version}"'
]
