[project]
name = "trojstenid"
version = "0.1.0"
description = ""
authors = [{ name = "Adam Zahradník", email = "adam@zahradnik.xyz" }]
requires-python = "~=3.12.0"
readme = "README.md"
dependencies = [
    "django~=5.2.0",
    "django-debug-toolbar~=5.2.0",
    "django-environ~=0.12.0",
    "django-allauth[socialaccount]~=65.10.0",
    "django-widget-tweaks~=1.5.0",
    "django-recaptcha~=4.1.0",
    "pillow~=11.2.1",
    "django-cleanup~=9.0.0",
    "python-ulid~=3.0.0",
    "gunicorn~=23.0.0",
    "sentry-sdk~=2.27.0",
    "django-probes~=1.7.0",
    "django-oauth-toolkit~=3.0.1",
    "psycopg[binary]~=3.2.7",
    "django-types~=0.20.0",
    "django-ipware~=7.0.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-stubs>=3.16.6",
    "django-rq>=3.2.2",
    "environs[django]>=14.5.0",
    "requests>=2.32.4",
]

[tool.ruff.lint]
select = [
  "E4", "E7", "E9",  # pycodestyle errors (default from ruff)
  "F",  # pyflakes
  "I",  # isort
  "N",  # naming conventions
  "DJ", # Django
  "T20", # print()
  "Q",  # quotes
  "S",  # security (bandit)
  "A",  # overwritting builtins
  "LOG", # logging
  "PTH", # use pathlib
]
ignore = [
  "S101", # assert
]

[dependency-groups]
dev = [
    "bumpver~=2024.1130",
    "pre-commit~=4.2.0",
]

[tool.bumpver]
current_version = "2026.1"
version_pattern = "YYYY.INC1"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"trojstenid/__init__.py" = [
    'VERSION = "{version}"'
]
